--- a/public/index.html
+++ b/public/index.html
@@ -14,12 +14,8 @@
     <!-- My Own CSS -->
     <link rel="stylesheet" href="/public/style.css" />
 
-    <title>Flutter - Rafi</title>
-
-
+    <title>Ahmad Rafi Wiratmoko</title>
   </head>
-
-
 
   <body>
     <!-- todo: 'root' COMPONENT -->
